--- a/vite-project/src/media.css
+++ b/vite-project/src/media.css
@@ -1,22 +1,5 @@
 @media only screen and (min-width: 320px) and (max-width:580px){
-  .header{
-    width: 100%;
-    height: 80px;
-    /* background-color: blue; */
-    display: flex;
-    justify-content: space-between;
-  }
-  .headerlogo{
-    width: 40%;
-    height: 100%;
-    /* background-color: pink; */
-  }
-  .headernamesprofile{
-    width: 70%;
-    height: 100%;
-    /* background-color: blue; */
-    display: none;
-  }
+  
   .theseconddiv{
     width: 100%;
     height: 600px;
@@ -486,7 +469,7 @@
   .header{
     width: 100%;
     height: 80px;
-    /* background-color: blueviolet; */
+    background-color: blueviolet;
     display: flex;
     justify-content: space-evenly;
    
